# python-cec-control

./: .cspell.json  .gitignore  LICENSE  MANIFEST.in  README.md  README.rm  cec.py  cec.sh  cec_control.service  cec_lib.cpp  cec_lib.h  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml  verification.yaml
cec_control/: __init__.py  __main__.py  _utils.py  bindings.cpp  cec.py  cec_cli.py  cec_compliance.py  cec_ctl.py  cec_daemon.py  cec_lib.cpp  cec_lib.h  cec_lib_types.py  cli.py  keyboard.py  main.py  remote.py
docs/: cec_control__cec_lib.md
reports/: .coverage
systemd/: cec_control.service
tests/: conftest.py  mocked_modules.py  test_cec.py  test_keyboard.py  test_utils.py
